--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 					<div id="intro">
 						<h1>Bienvenid@ a<br />
 						STEMDOOR</h1>
-						<p>Un espacio donde encontrarás recursos de aprendizaje STEM, hechos especialmente para ti.<br />
-						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>
+						<p>Un espacio donde encontrarás recursos de aprendizaje STEM hechos especialmente para ti.<br />
+						Acompáñanos a descubrir y vivir la magia de la ciencia y la tecnología.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
