--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">This is Massively</a></li>
 							<li><a href="generic.html">Generic Page</a></li>
-							<li><a href="elements.html">Elements Reference</a></li>
-                                                        <li><a href="page.html">Elements Reference</a></li>
+							<li><a href="elements.html">Bots</a></li>
+                                                        <li><a href="page.html">Recursos</a></li>
 						</ul>
 						</ul>
 					</nav>
