--- a/page.html
+++ b/page.html
@@ -28,7 +28,7 @@
 							<li><a href="index.html">This is Massively</a></li>
 							<li><a href="generic.html">Generic Page</a></li>
 							<li><a href="elements.html">Bots</a></li>
-							<li> class="active"><a href="page.html">Recursos</a></li>
+							<li class="active"><a href="page.html">Recursos</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
