--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">This is Massively</a></li>
+							<li class="active"><a href="index.html">Bienvenid@</a></li>
 							<li><a href="generic.html">Generic Page</a></li>
 							<li><a href="elements.html">Bots</a></li>
                                                         <li><a href="page.html">Recursos</a></li>
@@ -50,12 +50,12 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">April 25, 2017</span>
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<span class="date">Octubre, 2022</span>
+									<h2><a href="#">¿List@ para conocer<br />
+									más de STEMDOOR?</a></h2>
+									<p>Una iniciativa de la tica Abigail Monge Ramírez, <br />
+								        que busca ofrecer enriquecedores y<br />
+									entretenidos recursos de aprendizaje STEM.</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
