--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								        que busca ofrecer enriquecedores y<br />
 									entretenidos recursos de aprendizaje STEM.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#" class="image main"><img src="images/Bienvenid@ a STEMDOOR.png" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="#" class="button large">Full Story</a></li>
 								</ul>
