--- a/index.html
+++ b/index.html
@@ -69,22 +69,22 @@
 									<header>
 										<span class="date">Recurso 1</span>
 										<h2><a href="#">Conversando con mi <br />
-										científica/científico favorito</a></h2>
+										científic@ favorit@</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/Recurso 1.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Acá encontrarás un chatbot de procesamiento de lenguaje natural que te dará frases de tus cientific@s favorit@s y una pequeña reflexión de ellas.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Probar ya</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date">Recurso 2</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<h2><a href="#">Bot de los<br />
+										sentimientos</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/Recurso 2.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Acá encontrarás un chatbot de procesamiento de lenguaje natural al cuál podrás decirle0 cómo te sientes y te responderá con una frase de algún personaje importante.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
