--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 										científic@ favorit@</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/Recurso 1.jpg" alt="" /></a>
-									<p>Acá encontrarás un chatbot de procesamiento de lenguaje natural que te dará frases de tus cientific@s favorit@s y una pequeña reflexión de ellas.</p>
+									<p>Acá encontrarás un chatbot de procesamiento de lenguaje natural que te dará frases de tus científicas o científicos favoritos y si se lo pides también una pequeña reflexión de ellas.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Probar ya</a></li>
 									</ul>
@@ -84,7 +84,7 @@
 										sentimientos</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/Recurso 2.jpg" alt="" /></a>
-									<p>Acá encontrarás un chatbot de procesamiento de lenguaje natural al cuál podrás decirle0 cómo te sientes y te responderá con una frase de algún personaje importante.</p>
+									<p>Acá encontrarás un chatbot de procesamiento de lenguaje natural al cuál podrás decirle cómo te sientes y te responderá con una frase relacionada de algún personaje importante.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
