--- a/index.html
+++ b/index.html
@@ -86,120 +86,84 @@
 									<a href="#" class="image fit"><img src="images/Recurso 2.jpg" alt="" /></a>
 									<p>Acá encontrarás un chatbot de procesamiento de lenguaje natural al cuál podrás decirle cómo te sientes y te responderá con una frase relacionada de algún personaje importante.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Probar ya</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date">Recurso 3</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										<h2><a href="#"> Elige a tu<br />
+										científic@</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/Recurso 3.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Acá encontrarás un espacio con documentos y actividades a completar respectivas a la científica o científica que hayas elegido previamente.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Probar ya</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
+										<span class="date">Recurso 4</span>
+										<h2><a href="#">Perdidos en<br />
+										la historia</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/Recurso 4.jpg" alt="" /></a>
+									<p>Acá encontrarás una actividad muy parecida a un juego de memoria que consiste en encontrar el descubriento respectivo a cada científi@.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Probar ya</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
+										<span class="date">Recurso 5</span>
+										<h2><a href="#">Mujeres al<br />
+										poder</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/Recurso 5.jpg" alt="" /></a>
+									<p>Acá encontrarás una recopilación de la historia de grandes mujeres a lo largo de la historia que buscarán inspirarte y motivarte.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Probar ya</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 7, 2017</span>
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
+										<span class="date">Recurso 6</span>
+										<h2><a href="#">Entrenando a<br />
+										mi cerebro</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/Recurso 6.jpg" alt="" /></a>
+									<p>Acá encontrarás unos recursos que intentarán poner a prueba tus habilidades mentales mientras aprendes sobre ciencia y tecnología.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Probar ya</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">Recurso 7</span>
+										<h2><a href="#">Un poco más de mí<br />
+										y mejoremos juntos</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/Recurso 7.jpg" alt="" /></a>
+									<p>Acá encontrarás una breve autobiografía de Abigail Monge Ramírez, la creadora de esta página web. Además, encontrarás un chat bot por medio del cual nos podrás decir tus sugerencias.</p>
+									<ul class="actions special">
+										<li><a href="#" class="button">Probar ya</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">Recurso 8</span>
+										<h2><a href="#">STEM<br />
+										NEWS</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/Recurso 6.jpg" alt="" /></a>
+									<p>Acá encontrarás un espacio que donde se encuentran reunidos diferentes enlaces a recursos de aprendizaje STEM externos y adicionales.</p>
+									<ul class="actions special">
+										<li><a href="#" class="button">Probar ya</a></li>
 									</ul>
 								</article>
 							</section>
 
-						<!-- Footer -->
-							<footer>
-								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>-->
-									<a href="#" class="page active">1</a>
-									<a href="#" class="page">2</a>
-									<a href="#" class="page">3</a>
-									<span class="extra">&hellip;</span>
-									<a href="#" class="page">8</a>
-									<a href="#" class="page">9</a>
-									<a href="#" class="page">10</a>
-									<a href="#" class="next">Next</a>
-								</div>
-							</footer>
 
-					</div>
-
-				<!-- Footer -->
-					<footer id="footer">
-						<section>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-						</section>
-						<section class="split contact">
-							<section class="alt">
-								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
-							</section>
-							<section>
-								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
-							</section>
-							<section>
-								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
-							</section>
-							<section>
-								<h3>Social</h3>
-								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
