--- a/index.html
+++ b/index.html
@@ -156,22 +156,15 @@
 										NEWS</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/Recurso 6.jpg" alt="" /></a>
-									<p>Acá encontrarás un espacio que donde se encuentran reunidos diferentes enlaces a recursos de aprendizaje STEM externos y adicionales.</p>
+									<p>Acá encontrarás un espacio que donde se encuentran reunidos diferentes enlaces a recursos de aprendizaje STEM externos y adicionales, como canales de YouTube, etc.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Probar ya</a></li>
 									</ul>
 								</article>
 							</section>
-
-
-								</ul>
-							</section>
-						</section>
-					</footer>
-
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; STEMDOOR</li><li> by Abigail Monge Ramírez</a></li></ul>
 					</div>
 
 			</div>
