--- a/index.html
+++ b/index.html
@@ -160,8 +160,11 @@
 									<ul class="actions special">
 										<li><a href="#" class="button">Probar ya</a></li>
 									</ul>
-								</article>
-							</section>
+								</section>
+						</section>
+					</footer>
+
+
 				<!-- Copyright -->
 					<div id="copyright">
 						<ul><li>&copy; STEMDOOR</li><li> by Abigail Monge Ramírez</a></li></ul>
