--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 								</header>
 								<a href="#" class="image main"><img src="images/Bienvenid@ a STEMDOOR.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
+									<li><a href="#" class="button large">Saber más</a></li>
 								</ul>
 							</article>
 
