--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Bienvenid@</a></li>
-							<li><a href="generic.html">Generic Page</a></li>
-							<li><a href="elements.html">Bots</a></li>
+							<li><a href="generic.html">Bots</a></li>
+							<li><a href="elements.html">Recurso</a></li>
                                                         <li><a href="page.html">Recursos</a></li>
 						</ul>
 						</ul>
@@ -86,7 +86,7 @@
 									<a href="#" class="image fit"><img src="images/Recurso 2.jpg" alt="" /></a>
 									<p>Acá encontrarás un chatbot de procesamiento de lenguaje natural al cuál podrás decirle cómo te sientes y te responderá con una frase relacionada de algún personaje importante.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Probar ya</a></li>
+										<li><a href="https://scienceloverabi.github.io/SheIs_Proyect/generic.html" class="button">Probar ya</a></li>
 									</ul>
 								</article>
 								<article>
