--- a/generic.html
+++ b/generic.html
@@ -58,16 +58,12 @@
 							<form method="post" action="#">
 								<div class="fields">
 									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3"></textarea>
+									<iframe
+									allow="microphone;"
+									width="350"
+									height="430"
+									src="https://console.dialogflow.com/api-client/demo/embedded/27b29e89-7a0a-4087-ba8f-49a24e432de4">
+									</iframe>
 									</div>
 								</div>
 								<ul class="actions">
