--- a/generic.html
+++ b/generic.html
@@ -46,9 +46,7 @@
 									detallarán los pasos que debes seguir para hablar con Sofía y Adfectus.</p>
 								</header>
 								<div class="image main"><img src="images/como hablar con los bots.png" alt="" /></div>
-								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur sapien risus, commodo eget turpis at, elementum convallis enim turpis, lorem ipsum dolor sit amet nullam.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus. Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum.</p>
-							</section>
+								<p>Sofía y Adfectus son chatbots, es decir, son asistentes que se comunican con usuarios como tú a través de mensajes de texto y que simulan una conversación real entre personas. Estos recursos se desarrollaron en la herramienta de Google llamada Dialogflow, una plataforma con la capacidad de comprender el lenguaje natural en la cual se pueden diseñar interfaces de usuario conversacional. Estos chatbots (Sofía y Adfectus) son muy simples de usar y al lado de cada uno se encuentran más amplias las instrucciones que se están en la imagen que aparece previamente.</p>
 
 					</div>
 
@@ -60,14 +58,13 @@
 									<div class="field">
 									<iframe
 									allow="microphone;"
-									width="350"
-									height="430"
+									width="430"
+									height="530"
 									src="https://console.dialogflow.com/api-client/demo/embedded/27b29e89-7a0a-4087-ba8f-49a24e432de4">
 									</iframe>
 									</div>
 								</div>
 								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
 								</ul>
 							</form>
 						</section>
