--- a/generic.html
+++ b/generic.html
@@ -58,8 +58,8 @@
 									<div class="field">
 									<iframe
 									allow="microphone;"
-									width="430"
-									height="530"
+									width="480"
+									height="730"
 									src="https://console.dialogflow.com/api-client/demo/embedded/27b29e89-7a0a-4087-ba8f-49a24e432de4">
 									</iframe>
 									</div>
@@ -96,7 +96,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; STEMDOOR</li><li>By Abigail Monge R.</a></li></ul>
 					</div>
 
 			</div>
