--- a/generic.html
+++ b/generic.html
@@ -47,7 +47,6 @@
 								</header>
 								<div class="image main"><img src="images/como hablar con los bots.png" alt="" /></div>
 								<p>Sofía y Adfectus son chatbots, es decir, son asistentes que se comunican con usuarios como tú a través de mensajes de texto y que simulan una conversación real entre personas. Estos recursos se desarrollaron en la herramienta de Google llamada Dialogflow, una plataforma con la capacidad de comprender el lenguaje natural en la cual se pueden diseñar interfaces de usuario conversacional. Estos chatbots (Sofía y Adfectus) son muy simples de usar y al lado de cada uno se encuentran más amplias las instrucciones que se están en la imagen que aparece previamente.</p>
-
 					</div>
 
 				<!-- Footer -->
@@ -58,8 +57,8 @@
 									<div class="field">
 									<iframe
 									allow="microphone;"
-									width="480"
-									height="730"
+									width="520"
+									height="630"
 									src="https://console.dialogflow.com/api-client/demo/embedded/27b29e89-7a0a-4087-ba8f-49a24e432de4">
 									</iframe>
 									</div>
@@ -70,26 +69,55 @@
 						</section>
 						<section class="split contact">
 							<section class="alt">
-								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
+								<h3>Paso 1</h3>
+								<p>Saludar a Adfectus enviando un mensaje como:<br />
+								"hola","hey","buenos días", "buenas tardes", etc.</p>
 							</section>
 							<section>
-								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
+								<h3>Paso 2</h3>
+								<p>Elegir el sentimiento y enviar un mensaje<br />
+								con su respectivo número, NO escrito en letras.</p>
 							</section>
 							<section>
-								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
+								<h3>Paso 3</h3>
+								<p>Enviar un mensaje diciendo "por favor"</p>
 							</section>
 							<section>
-								<h3>Social</h3>
-								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
+								<h3>Paso 4</h3>
+								<p>Si te gustaría saber más de la persona que dijo la<br />
+								frase puedes enviar un mensaje diciendo "personaje".</p>
+							</section>
+							<section>
+								<h3>Paso 5</h3>
+								<p>Si te recibir un comentario de Adfectus sobre la<br />
+								frase puedes enviar un mensaje diciendo "comentario".</p>
+							</section>
+						</section>
+						</section>
+						<section class="split contact">
+							<section class="alt">
+								<h3>Paso 1</h3>
+								<p>Saludar a Adfectus enviando un mensaje como:<br />
+								"hola","hey","buenos días", "buenas tardes", etc.</p>
+							</section>
+							<section>
+								<h3>Paso 2</h3>
+								<p>Elegir el sentimiento y enviar un mensaje<br />
+								con su respectivo número, NO escrito en letras.</p>
+							</section>
+							<section>
+								<h3>Paso 3</h3>
+								<p>Enviar un mensaje diciendo "por favor"</p>
+							</section>
+							<section>
+								<h3>Paso 4</h3>
+								<p>Si te gustaría saber más de la persona que dijo la<br />
+								frase puedes enviar un mensaje diciendo "personaje".</p>
+							</section>
+							<section>
+								<h3>Paso 5</h3>
+								<p>Si te recibir un comentario de Adfectus sobre la<br />
+								frase puedes enviar un mensaje diciendo "comentario".</p>
 							</section>
 						</section>
 					</footer>
