--- a/generic.html
+++ b/generic.html
@@ -127,13 +127,11 @@
 							</section>
 							<section>
 								<h3>Paso 4</h3>
-								<p>Si te gustaría saber más de la persona que dijo la<br />
-								frase puedes enviar un mensaje diciendo "personaje".</p>
+								<p>Si te gustaría saber más de la persona que dijo la frase puedes enviar un mensaje diciendo "personaje".</p>
 							</section>
 							<section>
 								<h3>Paso 5</h3>
-								<p>Si te recibir un comentario de Adfectus sobre la<br />
-								frase puedes enviar un mensaje diciendo "comentario".</p>
+								<p>Si te recibir un comentario de Adfectus sobre la frase puedes enviar un mensaje diciendo "comentario".</p>
 							</section>
 						</section>
 						</section>
