--- a/generic.html
+++ b/generic.html
@@ -67,13 +67,11 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Paso 1</h3>
-								<p>Saludar a Adfectus enviando un mensaje como:<br />
-								"hola","hey","buenos días", "buenas tardes", etc.</p>
+								<p>Saludar a Adfectus enviando un mensaje como: "hola","hey","buenos días", "buenas tardes", etc.</p>
 							</section>
 							<section>
 								<h3>Paso 2</h3>
-								<p>Elegir el sentimiento y enviar un mensaje<br />
-								con su respectivo número, NO escrito en letras.</p>
+								<p>Elegir el sentimiento y enviar un mensaje con su respectivo número, NO escrito en letras.</p>
 							</section>
 							<section>
 								<h3>Paso 3</h3>
@@ -81,13 +79,11 @@
 							</section>
 							<section>
 								<h3>Paso 4</h3>
-								<p>Si te gustaría saber más de la persona que dijo la<br />
-								frase puedes enviar un mensaje diciendo "personaje".</p>
+								<p>Si te gustaría saber más de la persona que dijo la frase puedes enviar un mensaje diciendo "personaje".</p>
 							</section>
 							<section>
 								<h3>Paso 5</h3>
-								<p>Si te recibir un comentario de Adfectus sobre la<br />
-								frase puedes enviar un mensaje diciendo "comentario".</p>
+								<p>Si te recibir un comentario de Adfectus sobre la frase puedes enviar un mensaje diciendo "comentario".</p>
 							</section>
 						</section>
 								
@@ -114,13 +110,11 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Paso 1</h3>
-								<p>Saludar a Adfectus enviando un mensaje como:<br />
-								"hola","hey","buenos días", "buenas tardes", etc.</p>
+								<p>Saludar a Adfectus enviando un mensaje como: "hola","hey","buenos días", "buenas tardes", etc.</p>
 							</section>
 							<section>
 								<h3>Paso 2</h3>
-								<p>Elegir el sentimiento y enviar un mensaje<br />
-								con su respectivo número, NO escrito en letras.</p>
+								<p>Elegir el sentimiento y enviar un mensaje con su respectivo número, NO escrito en letras.</p>
 							</section>
 							<section>
 								<h3>Paso 3</h3>
