--- a/generic.html
+++ b/generic.html
@@ -47,7 +47,8 @@
 								</header>
 								<div class="image main"><img src="images/como hablar con los bots.png" alt="" /></div>
 								<p>Sofía y Adfectus son chatbots, es decir, son asistentes que se comunican con usuarios como tú a través de mensajes de texto y que simulan una conversación real entre personas. Estos recursos se desarrollaron en la herramienta de Google llamada Dialogflow, una plataforma con la capacidad de comprender el lenguaje natural en la cual se pueden diseñar interfaces de usuario conversacional. Estos chatbots (Sofía y Adfectus) son muy simples de usar y al lado de cada uno se encuentran más amplias las instrucciones que se están en la imagen que aparece previamente.</p>
-					<footer id="footer">
+								<h2>Adfectus</h2>
+			<footer id="footer">
 						<section>
 							<form method="post" action="#">
 								<div class="fields">
@@ -55,7 +56,7 @@
 									<iframe
 									allow="microphone;"
 									width="350"
-									height="630"
+									height="930"
 									src="https://console.dialogflow.com/api-client/demo/embedded/27b29e89-7a0a-4087-ba8f-49a24e432de4">
 									</iframe>
 									</div>
