--- a/generic.html
+++ b/generic.html
@@ -93,7 +93,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<form method="post" action="#">
+								<h1>Adfectus</h1>
 								<div class="fields">
 									<div class="field">
 									<iframe
