--- a/generic.html
+++ b/generic.html
@@ -98,7 +98,17 @@
 									<div class="field">
 									<iframe
 									allow="microphone;"
-									width="520"
+									width="350"
+									height="630"
+									src="https://console.dialogflow.com/api-client/demo/embedded/27b29e89-7a0a-4087-ba8f-49a24e432de4">
+									</iframe>
+								<h3>Paso 1</h3>
+								<h1>Sofía</h1>
+								<div class="fields">
+									<div class="field">
+									<iframe
+									allow="microphone;"
+									width="350"
 									height="630"
 									src="https://console.dialogflow.com/api-client/demo/embedded/27b29e89-7a0a-4087-ba8f-49a24e432de4">
 									</iframe>
