--- a/generic.html
+++ b/generic.html
@@ -137,7 +137,7 @@
 							</section>
 							<section>
 								<h3>Paso 5</h3>
-								<p>Si te recibir un comentario de Adfectus sobre la frase puedes enviar un mensaje diciendo "comentario".</p>
+								<p>Si te gustaría recibir un comentario de Adfectus sobre la frase puedes enviar un mensaje diciendo "comentario".</p>
 							</section>
 						</section>
 						</section>
