--- a/generic.html
+++ b/generic.html
@@ -65,9 +65,10 @@
 									<iframe
 									allow="microphone;"
 									width="350"
-									height="600"
+									height="560"
 									src="https://console.dialogflow.com/api-client/demo/embedded/27b29e89-7a0a-4087-ba8f-49a24e432de4">
 									</iframe>
+								<h1>    </h1>
 								<h1>    </h1>
 								<h1>Sofía</h1>
 								<div class="fields">
@@ -86,6 +87,26 @@
 						</section>
 						<section class="split contact">
 							<section class="alt">
+								<h3>Paso 1</h3>
+								<p>Saludar a Adfectus enviando un mensaje como: "hola","hey","buenos días", "buenas tardes", etc.</p>
+							</section>
+							<section>
+								<h3>Paso 2</h3>
+								<p>Elegir el sentimiento y enviar un mensaje con su respectivo número, NO escrito en letras.</p>
+							</section>
+							<section>
+								<h3>Paso 3</h3>
+								<p>Enviar un mensaje diciendo "por favor"</p>
+							</section>
+							<section>
+								<h3>Paso 4</h3>
+								<p>Si te gustaría saber más de la persona que dijo la frase puedes enviar un mensaje diciendo "personaje".</p>
+							</section>
+							<section>
+								<h3>Paso 5</h3>
+								<p>Si te gustaría recibir un comentario de Adfectus sobre la frase puedes enviar un mensaje diciendo "comentario".</p>
+							</section>
+							<section>
 								<h3>Paso 1</h3>
 								<p>Saludar a Adfectus enviando un mensaje como: "hola","hey","buenos días", "buenas tardes", etc.</p>
 							</section>
