--- a/generic.html
+++ b/generic.html
@@ -107,6 +107,9 @@
 								<p>Si te gustaría recibir un comentario de Adfectus sobre la frase puedes enviar un mensaje diciendo "comentario".</p>
 							</section>
 							<section>
+								<h1>                             .</h1>
+							</section>
+							<section>
 								<h3>Paso 1</h3>
 								<p>Saludar a Adfectus enviando un mensaje como: "hola","hey","buenos días", "buenas tardes", etc.</p>
 							</section>
