--- a/generic.html
+++ b/generic.html
@@ -76,8 +76,8 @@
 									<iframe
 									allow="microphone;"
 									width="350"
-									height="430"
-									src="https://console.dialogflow.com/api-client/demo/embedded/27b29e89-7a0a-4087-ba8f-49a24e432de4">
+									height="660"
+									src="https://console.dialogflow.com/api-client/demo/embedded/f09490bf-e3c0-49bd-aff8-499bb7e647c4">
 									</iframe>
 									</div>
 								</div>
@@ -111,11 +111,11 @@
 							</section>
 							<section>
 								<h3>Paso 1</h3>
-								<p>Saludar a Adfectus enviando un mensaje como: "hola","hey","buenos días", "buenas tardes", etc.</p>
+								<p>Saludar a Sofía enviando un mensaje como: "hola","hey","buenos días", "buenas tardes", etc.</p>
 							</section>
 							<section>
 								<h3>Paso 2</h3>
-								<p>Elegir el sentimiento y enviar un mensaje con su respectivo número, NO escrito en letras.</p>
+								<p>Elegir el área que deseas y enviar un mensaje con su respectivo número, NO escrito en letras.</p>
 							</section>
 							<section>
 								<h3>Paso 3</h3>
@@ -123,11 +123,7 @@
 							</section>
 							<section>
 								<h3>Paso 4</h3>
-								<p>Si te gustaría saber más de la persona que dijo la frase puedes enviar un mensaje diciendo "personaje".</p>
-							</section>
-							<section>
-								<h3>Paso 5</h3>
-								<p>Si te gustaría recibir un comentario de Adfectus sobre la frase puedes enviar un mensaje diciendo "comentario".</p>
+								<p>Si te gustaría entender mejor la frase y apender más sobre el tema, puedes enviar un mensaje diciendo "explicación".</p>
 							</section>
 						</section>
 						</section>
