--- a/generic.html
+++ b/generic.html
@@ -25,7 +25,7 @@
 						<ul class="links">
 							<li><a href="index.html">Bienvenid@</a></li>
 							<li class="active"><a href="generic.html">Bots</a></li>
-							<li><a href="elements.html">Recurso</a></li>
+							<li><a href="elements.html">Recurso 3</a></li>
 							<li><a href="page.html">Recursos</a></li>
 						</ul>
 						</ul>
@@ -76,7 +76,7 @@
 									<iframe
 									allow="microphone;"
 									width="350"
-									height="660"
+									height="630"
 									src="https://console.dialogflow.com/api-client/demo/embedded/f09490bf-e3c0-49bd-aff8-499bb7e647c4">
 									</iframe>
 									</div>
