--- a/elements.html
+++ b/elements.html
@@ -41,20 +41,19 @@
 								</header>
 
 								<!-- Text stuff -->
-									<h2>Text</h2>
-									<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
-									This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
-									This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>.
-									Finally, this is a <a href="#">link</a>.</p>
-									<hr />
-									<h2>Heading Level 2</h2>
-									<h3>Heading Level 3</h3>
-									<h4>Heading Level 4</h4>
-									<h5>Heading Level 5</h5>
-									<h6>Heading Level 6</h6>
+									<h2>Bienvenid@</h2>
+									<p>Acá te esparan varios recursos de aprendizaje STEM sobre tus temas favoritos y muchos más nuevos y súper interesantes.</p>
 									<hr />
 									<header>
-										<h2>Heading with a Subtitle</h2>
+										<h2>Física</h2>
+									<ul class="actions">
+										<li><a href="#" class="button">Leyes del movimiento de Newton</a></li>
+										<li><a href="#" class="button">Ley de la gravedad universal</a></li>
+										<li><a href="#" class="button">Leyes del movimiento de Newton</a></li>
+										<li><a href="#" class="button">El gato de schrödinger</a></li>
+										<li><a href="#" class="button">Relatividad Especial</a></li>
+										<li><a href="#" class="button">Relatividad General</a></li>
+									</ul>
 										<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
 									</header>
 									<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
