--- a/elements.html
+++ b/elements.html
@@ -49,11 +49,11 @@
 									<ul class="actions">
 										<li><a href="#" class="button">Leyes del movimiento de Newton</a></li>
 										<li><a href="#" class="button">Ley de la gravedad universal</a></li>
-										<li><a href="#" class="button">Leyes del movimiento de Newton</a></li>
 										<li><a href="#" class="button">El gato de schrödinger</a></li>
+									</ul>
+									<div class="row">
 										<li><a href="#" class="button">Relatividad Especial</a></li>
 										<li><a href="#" class="button">Relatividad General</a></li>
-									</ul>
 										<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
 									</header>
 									<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
