--- a/elements.html
+++ b/elements.html
@@ -51,17 +51,19 @@
 										<li><a href="#" class="button">Ley de la gravedad universal</a></li>
 										<li><a href="#" class="button">El gato de schrödinger</a></li>
 									</ul>
-									<div class="actions">
+									<ul class="actions">
 										<li><a href="#" class="button">Relatividad Especial</a></li>
 										<li><a href="#" class="button">Relatividad General</a></li>
 										<li><a href="#" class="button">Conservación de energía</a></li>
 										<li><a href="#" class="button">Dualidad onda-partícula</a></li>
+									</ul>
 									<header>
 										<h2>Química</h2>
 									<ul class="actions">
 										<li><a href="#" class="button">La materia</a></li>
 										<li><a href="#" class="button">Transformaciones de la materia</a></li>
 										<li><a href="#" class="button">El átomo</a></li>
+										<li><a href="#" class="button">Metales, no metales, y metaloides</a></li>
 									</header>
 									<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
 									<header>
