--- a/elements.html
+++ b/elements.html
@@ -64,9 +64,19 @@
 										<li><a href="#" class="button">Transformaciones de la materia</a></li>
 										<li><a href="#" class="button">El átomo</a></li>
 										<li><a href="#" class="button">Metales, no metales, y metaloides</a></li>
-									</header>
-									<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
+									</ul>
+									<ul class="actions">
+										<li><a href="#" class="button">Familias de la tabla periódica</a></li>
+										<li><a href="#" class="button">La molécula</a></li>
+									</ul>
 									<header>
+										<h2>Biología</h2>
+									<ul class="actions">
+										<li><a href="#" class="button">El origen de la vida</a></li>
+										<li><a href="#" class="button">La célula</a></li>
+										<li><a href="#" class="button">El ADN</a></li>
+										<li><a href="#" class="button">Reinos animales</a></li>
+									</ul>
 										<h4>Heading with a Subtitle</h4>
 										<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
 									</header>
