--- a/elements.html
+++ b/elements.html
@@ -42,7 +42,7 @@
 
 								<!-- Text stuff -->
 									<h2>Bienvenid@</h2>
-									<p>Acá te esparan varios recursos de aprendizaje STEM sobre tus temas favoritos y muchos más nuevos y súper interesantes.</p>
+									<p>Acá te esparan varios recursos de aprendizaje STEM sobre tus temas favoritos y muchos más nuevos y súper interesantes. Antes de encontrar los desafíos que te proponen nuestros científic@s, podrá encontrar diferentes infografías sobre algunos temas, los cuales están divididos por el campo al que pertenecen.</p>
 									<hr />
 									<header>
 										<h2>Física</h2>
@@ -76,6 +76,7 @@
 										<li><a href="#" class="button">La célula</a></li>
 										<li><a href="#" class="button">El ADN</a></li>
 										<li><a href="#" class="button">Reinos animales</a></li>
+										<li><a href="#" class="button">Los virus</a></li>
 									</ul>
 									<header>
 										<h2>Astronomía</h2>
@@ -84,6 +85,7 @@
 										<li><a href="#" class="button">El sistema solar</a></li>
 										<li><a href="#" class="button">Las estrellas</a></li>
 										<li><a href="#" class="button">Los agujeros negros</a></li>
+										<li><a href="#" class="button">Telescopios</a></li>
 									</ul>
 										<h4>Heading with a Subtitle</h4>
 										<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
