--- a/elements.html
+++ b/elements.html
@@ -87,13 +87,16 @@
 										<li><a href="#" class="button">Los agujeros negros</a></li>
 										<li><a href="#" class="button">Telescopios</a></li>
 									</ul>
-										<h4>Heading with a Subtitle</h4>
-										<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
-									</header>
-									<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
+									<hr />
+									<header>	
+										<h2>Albert Einstein</h2>
+									<dl>
+										<blockquote>Te saluda tu nuevo amigo, Albert Einstein. Requiero de tu ayuda para explicar mi teoría de la relatividad general. Te voy a dejar una lista de materiales con los cuales debes ingeniar una demostración que debes presentar en una exposición para la Royal Society, en la cual también debes contestar las preguntas que te voy a dejar junto a la lista de materiales.</blockquote>
 
 									<hr />
-
+										<dt>Item 1</dt>
+										<dd>
+											<p>Lorem ipsum d
 								<!-- Lists -->
 									<h2>Lists</h2>
 									<div class="row">
