--- a/elements.html
+++ b/elements.html
@@ -92,7 +92,24 @@
 										<h2>Albert Einstein</h2>
 									<dl>
 										<blockquote>Te saluda tu nuevo amigo, Albert Einstein. Requiero de tu ayuda para explicar mi teoría de la relatividad general. Te voy a dejar una lista de materiales con los cuales debes ingeniar una demostración que debes presentar en una exposición para la Royal Society, en la cual también debes contestar las preguntas que te voy a dejar junto a la lista de materiales.</blockquote>
+									
+										<div class="col-6 col-12-small">
 
+											<h3>Materiales</h3>
+											<ul>
+												<li>Recipiente.</li>
+												<li>Tela.</li>
+												<li>Cuerda.</li>
+												<li>Canica/bolincha.</li>
+										</div>
+										<div class="col-6 col-12-small">
+
+											<h3>Preguntas</h3>
+											<ol>
+												<li>¿Qué es el espacio-tiempo?</li>
+												<li>¿Qué es la curvatura del espacio tiempo?</li>
+												<li>¿Cómo ocurre el fenómeno de la dilatación del tiempo?</li>
+											</ol>
 									<hr />
 										<dt>Item 1</dt>
 										<dd>
