--- a/elements.html
+++ b/elements.html
@@ -110,6 +110,10 @@
 												<li>¿Qué es la curvatura del espacio tiempo?</li>
 												<li>¿Cómo ocurre el fenómeno de la dilatación del tiempo?</li>
 											</ol>
+										<div class="row">
+										<div class="col-6 col-12-small">
+											<ul class="actions stacked">
+												<li><a href="#" class="button primary fit">Tutorial</a></li>
 									<hr />
 										<dt>Item 1</dt>
 										<dd>
