--- a/elements.html
+++ b/elements.html
@@ -115,6 +115,34 @@
 											<ul class="actions stacked">
 												<li><a href="#" class="button primary fit">Tutorial</a></li>
 									<hr />
+									<header>	
+										<h2>Charles Darwin</h2>
+									<dl>
+										<blockquote>Te saluda tu nuevo amigo, Charles Darwin. Requiero de tu ayuda para explicar mi teoría de la evolución. Te voy a dejar una lista de materiales con los cuales debes ingeniar una demostración que debes presentar en una exposición para la Royal Society, en la cual también debes contestar las preguntas que te voy a dejar junto a la lista de materiales.</blockquote>
+									
+										<div class="col-6 col-12-small">
+
+											<h3>Materiales</h3>
+											<ul>
+												<li>Rollos de cartón.</li>
+												<li>Cartón.</li>
+												<li>Cinta.</li>
+												<li>Impresiones/dibujos.</li>
+										</div>
+										<div class="col-6 col-12-small">
+
+											<h3>Preguntas</h3>
+											<ol>
+												<li>¿Qué es la teoría de la evolución?</li>
+												<li>¿Qué es la selección natural?</li>
+												<li>¿Por qué se da la evolución?</li>
+												<li>¿Cómo el fue el proceso de hominización?</li>
+											</ol>
+										<div class="row">
+										<div class="col-6 col-12-small">
+											<ul class="actions stacked">
+												<li><a href="#" class="button primary fit">Tutorial</a></li>
+									<hr />
 										<dt>Item 1</dt>
 										<dd>
 											<p>Lorem ipsum d
