--- a/elements.html
+++ b/elements.html
@@ -114,6 +114,9 @@
 										<div class="col-6 col-12-small">
 											<ul class="actions stacked">
 												<li><a href="#" class="button primary fit">Tutorial</a></li>
+										</ul>
+										</div>
+									</div>
 									<hr />
 									<header>	
 										<h2>Charles Darwin</h2>
