--- a/elements.html
+++ b/elements.html
@@ -152,27 +152,27 @@
 									</div>
 									<hr />
 									<header>	
-										<h2>Charles Darwin</h2>
+										<h2>Científcos detrás de la teoría del Big Bang</h2>
 									<dl>
-										<blockquote>Te saluda tu nuevo amigo, Charles Darwin. Requiero de tu ayuda para explicar mi teoría de la evolución. Te voy a dejar una lista de materiales con los cuales debes ingeniar una demostración que debes presentar en una exposición para la Royal Society, en la cual también debes contestar las preguntas que te voy a dejar junto a la lista de materiales.</blockquote>
+										<blockquote>Te saludan tus nuevos amigos, los científicos detrás de la teoría del Big Bang. Requeremos de tu ayuda para explicar nuestra teoría de la formación del universo. Te voy a dejar una lista de materiales con los cuales debes ingeniar una demostración que debes presentar en una exposición para la Royal Society, en la cual también debes contestar las preguntas que te voy a dejar junto a la lista de materiales.</blockquote>
 									
 										<div class="col-6 col-12-small">
 
 											<h3>Materiales</h3>
 											<ul>
-												<li>Rollos de cartón.</li>
-												<li>Cartón.</li>
-												<li>Cinta.</li>
+												<li>Arena mágica.</li>
+												<li>Plato.</li>
+												<li>Mantel.</li>
 												<li>Impresiones/dibujos.</li>
 										</div>
 										<div class="col-6 col-12-small">
 
 											<h3>Preguntas</h3>
 											<ol>
-												<li>¿Qué es la teoría de la evolución?</li>
-												<li>¿Qué es la selección natural?</li>
-												<li>¿Por qué se da la evolución?</li>
-												<li>¿Cómo el fue el proceso de hominización?</li>
+												<li>¿En qué consiste la teoría del Big Bang?</li>
+												<li>¿Cómo se formó el universo?</li>
+												<li>¿Cómo se formó nuestro Sistema Solar?</li>
+												<li>¿Cuáles son las evidencias del Big Bang?</li>
 											</ol>
 										<div class="row">
 										<div class="col-6 col-12-small">
