--- a/elements.html
+++ b/elements.html
@@ -586,7 +586,7 @@ print 'It took ' + i + ' iterations to sort the deck.';
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; STEMDOOR</li><li>By Abigail Monge R.</a></li></ul>
 					</div>
 
 			</div>
