--- a/elements.html
+++ b/elements.html
@@ -181,7 +181,11 @@
 											</ul>
 										</div>
 									</div>
-
+				<!-- Footer -->
+					<footer id="footer">
+						<section>
+						</section>
+					</footer>
 				<!-- Copyright -->
 					<div id="copyright">
 						<ul><li>&copy; STEMDOOR</li><li>By Abigail Monge R.</a></li></ul>
