--- a/elements.html
+++ b/elements.html
@@ -181,11 +181,10 @@
 											</ul>
 										</div>
 									</div>
-				<!-- Footer -->
-					<footer id="footer">
-						<section>
-						</section>
-					</footer>
+							</section>
+
+					</div>
+
 				<!-- Copyright -->
 					<div id="copyright">
 						<ul><li>&copy; STEMDOOR</li><li>By Abigail Monge R.</a></li></ul>
