--- a/generic.html
+++ b/generic.html
@@ -26,7 +26,7 @@
 							<li><a href="index.html">Bienvenid@</a></li>
 							<li class="active"><a href="generic.html">Bots</a></li>
 							<li><a href="elements.html">Recurso 3</a></li>
-							<li><a href="page.html">Recursos</a></li>
+							<li><a href="Juegos.html">Juegos</a></li>
 						</ul>
 						</ul>
 					</nav>
