--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">Bienvenid@</a></li>
 							<li><a href="generic.html">Bots</a></li>
-							<li><a href="elements.html">Recurso</a></li>
-                                                        <li><a href="page.html">Recursos</a></li>
+							<li><a href="elements.html">Recurso 3</a></li>
+                                                        <li><a href="Juegos.html">Juegos</a></li>
 						</ul>
 						</ul>
 					</nav>
