--- a/elements.html
+++ b/elements.html
@@ -26,6 +26,7 @@
 							<li><a href="index.html">Bienvenid@</a></li>
 							<li><a href="generic.html">Bots</a></li>
 							<li class="active"><a href="elements.html">Recurso 3</a></li>
+							<li><a href="Juegos.html">Juegos</a></li>
 						</ul>
 						</ul>
 					</nav>
